# metamath

./: CMakeLists.txt  README.md  main.cpp  test.cpp
finite_element/: README.MD  element_1d.hpp  element_1d_integrate.hpp  element_2d.hpp  element_2d_integrate.hpp  element_2d_serendipity.hpp  element_base.hpp  element_integrate_base.hpp  quadrature.hpp
finite_element/element_1d_strategy/: geometry_1d.hpp  linear.hpp  quadratic.hpp  qubic.hpp
finite_element/element_2d_strategy/: bilinear.hpp  element_2d_strategy.hpp  geometry_2d.hpp  quadratic_serendipity.hpp  quadratic_triangle.hpp  qubic_serendipity.hpp  qubic_triangle.hpp  triangle.hpp
metamath/finite_element/: README.MD
metamath/functions/: functions.hpp
metamath/symdiff/: derivative.hpp
symdiff/: README.MD  constant.hpp  divides.hpp  expression.hpp  integral_constant.hpp  minus.hpp  multiplies.hpp  negate.hpp  plus.hpp  symdiff.hpp  variable.hpp
